<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/detail_title" />

    <ImageView
        android:id="@id/detail_image"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/detail_contentDesc"
        android:scaleType="center"
        android:src="@drawable/generic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_weight="1"
            android:text="@string/detail_dateLabel" />

        <TextView
            android:id="@id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/detail_actualDate" />
    </LinearLayout>

    <RatingBar
        android:id="@id/detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:stepSize="1" />

    <TextView
        android:id="@id/detail_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.88"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/detail_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@id/detail_webBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/detail_webButton" />

</LinearLayout>